// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldEditor should render create new scripted field correctly 1`] = `
<div>
  <eui-text>
    <h3>
      Create scripted field
    </h3>
  </eui-text>
  <eui-spacer
    size="m"
  />
  <eui-form>
    <scripting-disabled-callOut
      isVisible={false}
    />
    <scripting-warning-callOut
      isVisible={true}
    />
    <ScriptingHelpFlyout
      executeScript={[Function]}
      indexPattern={
        Object {
          "fields": Array [
            Object {
              "name": "foobar",
            },
          ],
        }
      }
      isVisible={false}
      lang="painless"
      onClose={[Function]}
    />
    <eui-form-row
      error="Name is required"
      helpText={null}
      isInvalid={true}
      label="Name"
    >
      <eui-field-text
        data-test-subj="editorFieldName"
        isInvalid={true}
        onChange={[Function]}
        placeholder="New scripted field"
        value=""
      />
    </eui-form-row>
    <eui-form-row
      helpText={null}
      label="Language"
    >
      <eui-select
        data-test-subj="editorFieldLang"
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "painless",
              "value": "painless",
            },
            Object {
              "text": "testlang",
              "value": "testlang",
            },
          ]
        }
        value="painless"
      />
    </eui-form-row>
    <eui-form-row
      label="Type"
    >
      <eui-select
        data-test-subj="editorFieldType"
        disabled={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "number",
              "value": "number",
            },
            Object {
              "text": "string",
              "value": "string",
            },
            Object {
              "text": "date",
              "value": "date",
            },
            Object {
              "text": "boolean",
              "value": "boolean",
            },
          ]
        }
        value="number"
      />
    </eui-form-row>
    <React.Fragment>
      <eui-form-row
        helpText={
          <span>
            Formatting allows you to control the way that specific values are displayed. It can also cause values to be completely changed and prevent highlighting in Discover from working.
          </span>
        }
        label={
          <span>
            Format 
            <span>
              (Default: 
              <eui-code>
                Test format
              </eui-code>
              )
            </span>
          </span>
        }
      >
        <eui-select
          data-test-subj="editorSelectedFormatId"
          onChange={[Function]}
          options={
            Array [
              Object {
                "text": "- Default -",
                "value": "",
              },
              Object {
                "text": "Test format",
                "value": "test_format",
              },
            ]
          }
        />
      </eui-form-row>
    </React.Fragment>
    <eui-form-row
      label="Popularity"
    >
      <eui-field-number
        data-test-subj="editorFieldCount"
        onChange={[Function]}
      />
    </eui-form-row>
    <eui-form-row
      error="Script is required"
      helpText={
        <eui-flex-group
          gutterSize="xs"
        >
          <eui-flex-item
            grow={false}
          >
            <eui-icon
              color="primary"
              type="help"
            />
          </eui-flex-item>
          <eui-flex-item>
            <eui-link
              data-test-subj="scriptedFieldsHelpLink"
              onClick={[Function]}
            >
              Get help with the syntax and preview the results of your script
            </eui-link>
          </eui-flex-item>
        </eui-flex-group>
      }
      isInvalid={true}
      label="Script"
    >
      <eui-textArea
        data-test-subj="editorFieldScript"
        isInvalid={true}
        onChange={[Function]}
      />
    </eui-form-row>
    <eui-flex-group>
      <eui-flex-item
        grow={false}
      >
        <eui-button
          data-test-subj="fieldSaveButton"
          fill={true}
          isDisabled={true}
          isLoading={false}
          onClick={[Function]}
        >
          Create field
        </eui-button>
      </eui-flex-item>
      <eui-flex-item
        grow={false}
      >
        <eui-button-empty
          data-test-subj="fieldCancelButton"
          onClick={[Function]}
        >
          Cancel
        </eui-button-empty>
      </eui-flex-item>
    </eui-flex-group>
  </eui-form>
  <eui-spacer
    size="l"
  />
</div>
`;

exports[`FieldEditor should render edit scripted field correctly 1`] = `
<div>
  <eui-text>
    <h3>
      Edit test
    </h3>
  </eui-text>
  <eui-spacer
    size="m"
  />
  <eui-form>
    <scripting-disabled-callOut
      isVisible={false}
    />
    <scripting-warning-callOut
      isVisible={true}
    />
    <ScriptingHelpFlyout
      executeScript={[Function]}
      indexPattern={
        Object {
          "fields": Array [
            Object {
              "name": "foobar",
            },
            Object {
              "format": Format {},
              "lang": "painless",
              "name": "test",
              "script": "doc.test.value",
              "scripted": true,
              "type": "number",
            },
          ],
        }
      }
      isVisible={false}
      lang="painless"
      name="test"
      onClose={[Function]}
      script="doc.test.value"
    />
    <eui-form-row
      helpText={null}
      label="Language"
    >
      <eui-select
        data-test-subj="editorFieldLang"
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "painless",
              "value": "painless",
            },
            Object {
              "text": "testlang",
              "value": "testlang",
            },
          ]
        }
        value="painless"
      />
    </eui-form-row>
    <eui-form-row
      label="Type"
    >
      <eui-select
        data-test-subj="editorFieldType"
        disabled={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "number",
              "value": "number",
            },
            Object {
              "text": "string",
              "value": "string",
            },
            Object {
              "text": "date",
              "value": "date",
            },
            Object {
              "text": "boolean",
              "value": "boolean",
            },
          ]
        }
        value="number"
      />
    </eui-form-row>
    <React.Fragment>
      <eui-form-row
        helpText={
          <span>
            Formatting allows you to control the way that specific values are displayed. It can also cause values to be completely changed and prevent highlighting in Discover from working.
          </span>
        }
        label={
          <span>
            Format 
            <span>
              (Default: 
              <eui-code>
                Test format
              </eui-code>
              )
            </span>
          </span>
        }
      >
        <eui-select
          data-test-subj="editorSelectedFormatId"
          onChange={[Function]}
          options={
            Array [
              Object {
                "text": "- Default -",
                "value": "",
              },
              Object {
                "text": "Test format",
                "value": "test_format",
              },
            ]
          }
        />
      </eui-form-row>
    </React.Fragment>
    <eui-form-row
      label="Popularity"
    >
      <eui-field-number
        data-test-subj="editorFieldCount"
        onChange={[Function]}
      />
    </eui-form-row>
    <eui-form-row
      error={null}
      helpText={
        <eui-flex-group
          gutterSize="xs"
        >
          <eui-flex-item
            grow={false}
          >
            <eui-icon
              color="primary"
              type="help"
            />
          </eui-flex-item>
          <eui-flex-item>
            <eui-link
              data-test-subj="scriptedFieldsHelpLink"
              onClick={[Function]}
            >
              Get help with the syntax and preview the results of your script
            </eui-link>
          </eui-flex-item>
        </eui-flex-group>
      }
      isInvalid={false}
      label="Script"
    >
      <eui-textArea
        data-test-subj="editorFieldScript"
        isInvalid={false}
        onChange={[Function]}
        value="doc.test.value"
      />
    </eui-form-row>
    <eui-flex-group>
      <eui-flex-item
        grow={false}
      >
        <eui-button
          data-test-subj="fieldSaveButton"
          fill={true}
          isDisabled={false}
          isLoading={false}
          onClick={[Function]}
        >
          Save field
        </eui-button>
      </eui-flex-item>
      <eui-flex-item
        grow={false}
      >
        <eui-button-empty
          data-test-subj="fieldCancelButton"
          onClick={[Function]}
        >
          Cancel
        </eui-button-empty>
      </eui-flex-item>
      <eui-flex-item
        grow={false}
      >
        <eui-button-empty
          color="danger"
          onClick={[Function]}
        >
          Delete
        </eui-button-empty>
      </eui-flex-item>
    </eui-flex-group>
  </eui-form>
  <eui-spacer
    size="l"
  />
</div>
`;

exports[`FieldEditor should show conflict field warning 1`] = `
<div>
  <eui-text>
    <h3>
      Create scripted field
    </h3>
  </eui-text>
  <eui-spacer
    size="m"
  />
  <eui-form>
    <scripting-disabled-callOut
      isVisible={false}
    />
    <scripting-warning-callOut
      isVisible={true}
    />
    <ScriptingHelpFlyout
      executeScript={[Function]}
      indexPattern={
        Object {
          "fields": Array [
            Object {
              "name": "foobar",
            },
            Object {
              "format": Format {},
              "lang": "painless",
              "name": "test",
              "script": "doc.test.value",
              "scripted": true,
              "type": "number",
            },
            Object {
              "format": Format {},
              "lang": "testlang",
              "name": "test",
              "script": "doc.test.value",
              "scripted": true,
              "type": "number",
            },
          ],
        }
      }
      isVisible={false}
      lang="painless"
      name="foobar"
      onClose={[Function]}
    />
    <eui-form-row
      error={null}
      helpText={
        <span>
          <eui-icon
            color="warning"
            size="s"
            type="alert"
          />
           
          <strong>
            Mapping Conflict:
          </strong>
            You already have a field with the name 
          <eui-code>
            foobar
          </eui-code>
          . Naming your scripted field with the same name means you won't be able to query both fields at the same time.
        </span>
      }
      isInvalid={false}
      label="Name"
    >
      <eui-field-text
        data-test-subj="editorFieldName"
        isInvalid={false}
        onChange={[Function]}
        placeholder="New scripted field"
        value="foobar"
      />
    </eui-form-row>
    <eui-form-row
      helpText={null}
      label="Language"
    >
      <eui-select
        data-test-subj="editorFieldLang"
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "painless",
              "value": "painless",
            },
            Object {
              "text": "testlang",
              "value": "testlang",
            },
          ]
        }
        value="painless"
      />
    </eui-form-row>
    <eui-form-row
      label="Type"
    >
      <eui-select
        data-test-subj="editorFieldType"
        disabled={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "number",
              "value": "number",
            },
            Object {
              "text": "string",
              "value": "string",
            },
            Object {
              "text": "date",
              "value": "date",
            },
            Object {
              "text": "boolean",
              "value": "boolean",
            },
          ]
        }
        value="number"
      />
    </eui-form-row>
    <React.Fragment>
      <eui-form-row
        helpText={
          <span>
            Formatting allows you to control the way that specific values are displayed. It can also cause values to be completely changed and prevent highlighting in Discover from working.
          </span>
        }
        label={
          <span>
            Format 
            <span>
              (Default: 
              <eui-code>
                Test format
              </eui-code>
              )
            </span>
          </span>
        }
      >
        <eui-select
          data-test-subj="editorSelectedFormatId"
          onChange={[Function]}
          options={
            Array [
              Object {
                "text": "- Default -",
                "value": "",
              },
              Object {
                "text": "Test format",
                "value": "test_format",
              },
            ]
          }
        />
      </eui-form-row>
    </React.Fragment>
    <eui-form-row
      label="Popularity"
    >
      <eui-field-number
        data-test-subj="editorFieldCount"
        onChange={[Function]}
      />
    </eui-form-row>
    <eui-form-row
      error="Script is required"
      helpText={
        <eui-flex-group
          gutterSize="xs"
        >
          <eui-flex-item
            grow={false}
          >
            <eui-icon
              color="primary"
              type="help"
            />
          </eui-flex-item>
          <eui-flex-item>
            <eui-link
              data-test-subj="scriptedFieldsHelpLink"
              onClick={[Function]}
            >
              Get help with the syntax and preview the results of your script
            </eui-link>
          </eui-flex-item>
        </eui-flex-group>
      }
      isInvalid={true}
      label="Script"
    >
      <eui-textArea
        data-test-subj="editorFieldScript"
        isInvalid={true}
        onChange={[Function]}
      />
    </eui-form-row>
    <eui-flex-group>
      <eui-flex-item
        grow={false}
      >
        <eui-button
          data-test-subj="fieldSaveButton"
          fill={true}
          isDisabled={true}
          isLoading={false}
          onClick={[Function]}
        >
          Create field
        </eui-button>
      </eui-flex-item>
      <eui-flex-item
        grow={false}
      >
        <eui-button-empty
          data-test-subj="fieldCancelButton"
          onClick={[Function]}
        >
          Cancel
        </eui-button-empty>
      </eui-flex-item>
    </eui-flex-group>
  </eui-form>
  <eui-spacer
    size="l"
  />
</div>
`;

exports[`FieldEditor should show deprecated lang warning 1`] = `
<div>
  <eui-text>
    <h3>
      Edit test
    </h3>
  </eui-text>
  <eui-spacer
    size="m"
  />
  <eui-form>
    <scripting-disabled-callOut
      isVisible={false}
    />
    <scripting-warning-callOut
      isVisible={true}
    />
    <ScriptingHelpFlyout
      executeScript={[Function]}
      indexPattern={
        Object {
          "fields": Array [
            Object {
              "name": "foobar",
            },
            Object {
              "format": Format {},
              "lang": "painless",
              "name": "test",
              "script": "doc.test.value",
              "scripted": true,
              "type": "number",
            },
            Object {
              "format": Format {},
              "lang": "testlang",
              "name": "test",
              "script": "doc.test.value",
              "scripted": true,
              "type": "number",
            },
          ],
        }
      }
      isVisible={false}
      lang="testlang"
      name="test"
      onClose={[Function]}
      script="doc.test.value"
    />
    <eui-form-row
      helpText={
        <span>
          <eui-icon
            color="warning"
            size="s"
            type="alert"
          />
           
          <strong>
            Deprecation Warning:
          </strong>
           
          <eui-code>
            testlang
          </eui-code>
           is deprecated and support will be removed in the next major version of Kibana and Elasticsearch. We recommend using 
          <eui-link
            href="(docLink for scriptedFields.painless)"
            target="_window"
          >
            Painless
          </eui-link>
           for new scripted fields.
        </span>
      }
      label="Language"
    >
      <eui-select
        data-test-subj="editorFieldLang"
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "painless",
              "value": "painless",
            },
            Object {
              "text": "testlang",
              "value": "testlang",
            },
          ]
        }
        value="testlang"
      />
    </eui-form-row>
    <eui-form-row
      label="Type"
    >
      <eui-select
        data-test-subj="editorFieldType"
        disabled={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "string",
              "value": "string",
            },
            Object {
              "text": "number",
              "value": "number",
            },
            Object {
              "text": "date",
              "value": "date",
            },
            Object {
              "text": "ip",
              "value": "ip",
            },
            Object {
              "text": "boolean",
              "value": "boolean",
            },
            Object {
              "text": "geo_point",
              "value": "geo_point",
            },
            Object {
              "text": "geo_shape",
              "value": "geo_shape",
            },
            Object {
              "text": "attachment",
              "value": "attachment",
            },
            Object {
              "text": "murmur3",
              "value": "murmur3",
            },
            Object {
              "text": "_source",
              "value": "_source",
            },
            Object {
              "text": "unknown",
              "value": "unknown",
            },
            Object {
              "text": "conflict",
              "value": "conflict",
            },
          ]
        }
        value="number"
      />
    </eui-form-row>
    <React.Fragment>
      <eui-form-row
        helpText={
          <span>
            Formatting allows you to control the way that specific values are displayed. It can also cause values to be completely changed and prevent highlighting in Discover from working.
          </span>
        }
        label={
          <span>
            Format 
            <span>
              (Default: 
              <eui-code>
                Test format
              </eui-code>
              )
            </span>
          </span>
        }
      >
        <eui-select
          data-test-subj="editorSelectedFormatId"
          onChange={[Function]}
          options={
            Array [
              Object {
                "text": "- Default -",
                "value": "",
              },
              Object {
                "text": "Test format",
                "value": "test_format",
              },
            ]
          }
        />
      </eui-form-row>
    </React.Fragment>
    <eui-form-row
      label="Popularity"
    >
      <eui-field-number
        data-test-subj="editorFieldCount"
        onChange={[Function]}
      />
    </eui-form-row>
    <eui-form-row
      error={null}
      helpText={
        <eui-flex-group
          gutterSize="xs"
        >
          <eui-flex-item
            grow={false}
          >
            <eui-icon
              color="primary"
              type="help"
            />
          </eui-flex-item>
          <eui-flex-item>
            <eui-link
              data-test-subj="scriptedFieldsHelpLink"
              onClick={[Function]}
            >
              Get help with the syntax and preview the results of your script
            </eui-link>
          </eui-flex-item>
        </eui-flex-group>
      }
      isInvalid={false}
      label="Script"
    >
      <eui-textArea
        data-test-subj="editorFieldScript"
        isInvalid={false}
        onChange={[Function]}
        value="doc.test.value"
      />
    </eui-form-row>
    <eui-flex-group>
      <eui-flex-item
        grow={false}
      >
        <eui-button
          data-test-subj="fieldSaveButton"
          fill={true}
          isDisabled={false}
          isLoading={false}
          onClick={[Function]}
        >
          Save field
        </eui-button>
      </eui-flex-item>
      <eui-flex-item
        grow={false}
      >
        <eui-button-empty
          data-test-subj="fieldCancelButton"
          onClick={[Function]}
        >
          Cancel
        </eui-button-empty>
      </eui-flex-item>
      <eui-flex-item
        grow={false}
      >
        <eui-button-empty
          color="danger"
          onClick={[Function]}
        >
          Delete
        </eui-button-empty>
      </eui-flex-item>
    </eui-flex-group>
  </eui-form>
  <eui-spacer
    size="l"
  />
</div>
`;
